--- a/video11_1_Installing Q#/qc101project.csproj
+++ b/video11_1_Installing Q#/qc101project.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.Quantum.Sdk/0.12.20072031">
+<Project Sdk="Microsoft.Quantum.Sdk/0.28.302812">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
